# research-copilot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.py  pyproject.toml
.github/workflows/: ci.yaml
api/: README.md  main.py  schemas.py
evaluation/: README.md  gold_set.json  metrics.py  retrieval_eval.py
ingestion/: README.md  chunker.py  downloader.py  embeddings.py  ingestion-README.md  pdf_loader.py
llm/: README.md  generate.py  prompt.py
references_docs/: RAG-Course-Exercises-Workbook.md  Retrieval-Augmented-Generation-Course.pptx
scripts/: README.md  ask.py  build_index.py
tests/: test_api.py  test_ask.py  test_build_index.py  test_chunker.py  test_config.py  test_downloader.py  test_embeddings.py  test_faiss_store.py  test_generate.py  test_metrics.py  test_pdf_loader.py  test_prompt.py  test_retrieval_eval.py
vector_db/: README.md  faiss_store.py
